--- a/app/src/main/res/layout/modal_comprobacion.xml
+++ b/app/src/main/res/layout/modal_comprobacion.xml
@@ -1,12 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:layout_marginTop="30dp"
+    android:layout_marginBottom="100dp">
+
+    <LinearLayout
+        android:id="@+id/barra_superior"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:elevation="6dp"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="41dp"
+            android:layout_marginLeft="65dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="15dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="Lista de comprobación"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:textColor="@color/black"/>
+        <TextView
+            android:id="@+id/comprobaciones_realizadas"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:singleLine="true"
+            android:text=""/>
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:singleLine="true"
+            android:text="/"/>
+        <TextView
+            android:id="@+id/total_comprobaciones"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="30dp"
+            android:singleLine="true"
+            android:text=""/>
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="380dp"
-        android:layout_height="600dp"
+        android:layout_height="450dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
@@ -17,31 +62,35 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="60dp"
             android:layout_marginEnd="16dp"
-            android:layout_marginBottom="100dp"
             android:orientation="vertical">
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/lista_recicleview_jhon"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"/>
+                android:layout_marginBottom="10dp" />
         </ScrollView>
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="380dp"
-        android:layout_height="600dp"
         android:id="@+id/txt_informacion"
-        android:visibility="invisible"
-        tools:ignore="MissingConstraints">
+        android:layout_width="match_parent"
+        android:layout_height="54dp"
+        android:elevation="6dp"
+        android:layout_marginTop="-300dp"
+        android:orientation="horizontal"
+        android:visibility="invisible">
         <TextView
-            android:layout_width="380dp"
-            android:layout_height="600dp"
-            android:text="No hay información."
-            android:textSize="18sp"
+            android:layout_width="match_parent"
+            android:layout_height="41dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_weight="1"
             android:gravity="center"
+            android:text="No hay información"
+            android:textSize="16sp"
+            android:textStyle="bold"
             android:textColor="@color/black"/>
     </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
