--- a/app/src/main/res/layout/modal_comprobacion.xml
+++ b/app/src/main/res/layout/modal_comprobacion.xml
@@ -50,20 +50,23 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="380dp"
+        android:layout_width="350dp"
         android:layout_height="450dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
-        android:background="@color/whiteTextColor"
+        android:background="#DFEAEA"
         tools:ignore="MissingConstraints">
+
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:orientation="vertical">
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/lista_recicleview_jhon"
                 android:layout_width="match_parent"
@@ -77,7 +80,7 @@
         android:layout_width="match_parent"
         android:layout_height="54dp"
         android:elevation="6dp"
-        android:layout_marginTop="-300dp"
+        android:layout_marginTop="-280dp"
         android:orientation="horizontal"
         android:visibility="invisible">
         <TextView
